<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="app_name">Realistic Movie Recommender</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">Realistic Movie Recommender</string>
	<string name="app_id">185710231571422</string>
	<string name="get_started">To get started, log in using Facebook</string>
	<string name="settings">Settings</string>
	<string name="action_people">With whom?</string>
	<string name="action_people_default">Select friends</string>
	<string name="error_dialog_title">Error</string>
	<string name="error_dialog_button_text">OK</string>
	<string name="single_user_selected">%1$s</string>
	<string name="two_users_selected">%1$s and %2$s</string>
	<string name="multiple_users_selected">%1$s and %2$s others</string>
	<string name="temp">Remove this Later</string>
	<string name="tomatoes_key">mev5zgajg4kprzkjxafeszcb</string>
	<string name="moviePicture">Movie Logo</string>
	<string name="movieName">[MOVIE NAME]</string>
	<string name="movieDescription">[The description of the movie will be entered here
		after it has been pulled from the server.]</string>
	<string name="movieGenre">Genre: [GENRE]</string>
	<string name="tomatoes_power">Powered by Rotten Tomatoes!</string>
	<string name="friendName">[FRIEND NAME]</string>
	<string name="saveButton">Save</string>
	<string name="settings">Settings</string>
	<string name="minRating">Minimum Rating</string>
	<string name="minPearson">Minimum Pearson</string>
	<string name="useSocial">Use Social Net</string>
	<string name="appNameMultiLine">Realistic\nMovie\nRecommender</string>
	<string name="recommendations">Recommendations</string>
	<string name="friends">Friends</string>
	<string name="favorites">Favorites</string>
	<string name="save">Save</string>
	<string name="file_dir">/MovieRecommender/data/</string>
</resources>