<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/splashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="221dp"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_weight="0.03"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/get_started"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp" />
    <ImageView 
        android:id="@+id/rt_power_image"
        android:src="@drawable/rt_power"
        android:contentDescription="@string/tomatoes_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

</LinearLayout>